[package]
name = "project-below"
description = "Quickly run commands in many projects below the current directory"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/project-below"
authors = ["EdJoPaTo <project-below-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
glob = "0.3"

[dependencies]
clap = { version = "3", features = ["cargo", "wrap_help"] }
glob = "0.3"
ignore = "0.4"
