[package]
name = "project-below"
description = "Quickly run commands in many projects below the current directory"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/project-below"
authors = ["EdJoPaTo <project-below-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
globset = "0.4"

[dependencies]
clap = { version = "3", features = ["cargo", "wrap_help"] }
globset = "0.4"
ignore = "0.4"
